handle cmdline args, add interactive mode
continuely query words or phrases until `ctrl-c` or `ctrl-d` is pressed.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "cheerio": "",
-        "cli-color": ""
+        "cli-color": "",
+        "argparse": "https://github.com/nodeca/argparse/tarball/master"
     }
 }
