--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-    "author": "Jeff Chien <jeffchien13@gmail.com>",
-    "name": "jydict",
-    "description": "ydict nodejs implementation",
-    "version": "0.1.3",
-    "engine": "node",
-    "preferGlobal": "true",
-    "bin": {
-        "jydict": "./jydict.ls"
-    },
-    "dependencies": {
-        "cheerio": "",
-        "cli-color": "",
-        "argparse": "https://github.com/nodeca/argparse/tarball/master"
-    }
+  "author": "Jeff Chien <jeffchien13@gmail.com>",
+  "name": "jydict",
+  "description": "ydict nodejs implementation",
+  "version": "0.1.3",
+  "engine": "node",
+  "preferGlobal": "true",
+  "bin": {
+    "jydict": "./jydict.ls"
+  },
+  "dependencies": {
+    "cheerio": "",
+    "cli-color": "",
+    "argparse": "https://github.com/nodeca/argparse/tarball/master"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-livescript": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3"
+  }
 }
