--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
   "engine": "node",
   "preferGlobal": "true",
   "bin": {
-    "jydict": "./jydict.ls"
+    "jydict": "./bin/jydict.js"
   },
   "dependencies": {
-    "cheerio": "",
-    "cli-color": "",
-    "argparse": "https://github.com/nodeca/argparse/tarball/master",
-    "speaker": "0.0.10",
-    "lame": "~1.0.3"
+    "cheerio": "~0.12.4",
+    "cli-color": "~0.2.3",
+    "lame": "*",
+    "docopt": "~0.4.0",
+    "speaker": "git+https://github.com/JeffChien/node-speaker"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-livescript": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-livescript": "~0.5.1",
+    "grunt": "~0.4.2",
+    "grunt": "*",
+    "grunt-livescript": "*",
+    "grunt-contrib-watch": "*"
+  },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/JeffChien/jydict"
   }
 }
