--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "email": "jeffchien13@gmail.com"
   },
   "name": "jydict",
-  "description": "ydict nodejs implementation",
+  "description": "eng-cht dictionary",
   "version": "0.1.7",
   "preferGlobal": "true",
+  "main": "lib/index.js",
   "bin": {
-    "jydict": "bin/jydict.js"
+    "jydict": "bin/jydict"
+  },
+  "scripts": {
+    "test": "mocha",
+    "prepublish": "lsc -cj package.ls &&\nlsc -bc -o lib src"
   },
   "dependencies": {
     "cheerio": "^0.18.0",
